--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,30 @@
-annotated-types==0.7.0
-anyio==4.10.0
-attrs==25.3.0
-certifi==2025.8.3
-colorama==0.4.6
-distro==1.9.0
-h11==0.16.0
-httpcore==1.0.9
 httpx==0.28.1
-idna==3.10
-jiter==0.10.0
+aiohttp==3.10.11
+openai==1.99.9
+rich==14.1.0
+python-dotenv==1.1.1
+pydantic==2.11.7
+pydantic-core==2.33.2
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
-markdown-it-py==4.0.0
-mdurl==0.1.2
-openai==1.99.9
 pillow==11.3.0
-pydantic==2.11.7
-pydantic_core==2.33.2
-Pygments==2.19.2
-python-dotenv==1.1.1
-referencing==0.36.2
-rich==14.1.0
-rpds-py==0.27.0
-sniffio==1.3.1
 tabulate==0.9.0
 tqdm==4.67.1
+typing-extensions==4.14.1
+annotated-types==0.7.0
+certifi==2025.8.3
+h11==0.16.0
+httpcore==1.0.9
+anyio==4.10.0
+sniffio==1.3.1
+idna==3.10
+jiter==0.10.0
+attrs==25.3.0
+rpds-py==0.27.0
+referencing==0.36.2
+markdown-it-py==4.0.0
+mdurl==0.1.2
+Pygments==2.19.2
+colorama==0.4.6
+distro==1.9.0
 typing-inspection==0.4.1
-typing_extensions==4.14.1
